--- a/sass/navigation/_nav.scss
+++ b/sass/navigation/_nav.scss
@@ -148,6 +148,8 @@
   @include transition(transform .4s 0s, visibility 0s .4s);
   /* this creates the subtle slide in animation of the navigation */
   @include transform(translateX(80px));
+  box-shadow: inset 1px -1px 20px 1px #000;
+
 
   .menu {
     margin: 10px 0 16px;
