--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -9,7 +9,7 @@ input[type="submit"],
 	@include transition(all 0.3s linear);
 	border: 3px solid $color__primary;
 	padding: 10px 20px;
-	border-radius: 10px;
+	border-radius: $radius;
 }
 
 button:hover,
