--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -6,20 +6,20 @@ textarea {
 	display: block;
 	width: 100%;
 	padding: 10px 20px;
-	border: 3px solid;
+	border: 2px solid;
 	clear: both;
 	@include transition(all 0.3s linear);
 	-webkit-appearance: none;
 	-webkit-box-shadow: none;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+	-webkit-border-radius: $radius;
+	-moz-border-radius: $radius;
+	border-radius: $radius;
 }
 
 input:focus,
 textarea:focus {
 	outline: none;
-	border-color: rgba(0,0,0,0.15);
+	border-color: rgba(0,0,0,0.25);
 	background-color: #FFF;
 	-webkit-box-shadow: 0 0 20px #cccccc;
 	-moz-box-shadow: 0 0 20px #cccccc;
