--- a/sass/navigation/_nav.scss
+++ b/sass/navigation/_nav.scss
@@ -9,7 +9,7 @@
 
 .nav-title {
   color: $color__light-alt;
-  padding-top: 18px;
+  padding: 18px 0;
   margin: 0;
 }
 
@@ -76,6 +76,15 @@
   height: 100%;
   width: 50px;
   background: $color__light-alt;
+  border-radius: $radius;
+  @include transition(all 0.3s linear);
+
+  &:hover {
+    outline: none;
+    -webkit-box-shadow: 0 0 20px #cccccc;
+    -moz-box-shadow: 0 0 20px #cccccc;
+    box-shadow: 0 0 20px rgba(0,0,0,0.15);
+  }
 }
 
 /* this span is the central line in the menu icon */
@@ -132,7 +141,7 @@
 
 
 #site-navigation {
-  position: fixed;
+  position: absolute;
   height: 100%;
   right: 0;
   top: 0;
@@ -148,12 +157,6 @@
   @include transition(transform .4s 0s, visibility 0s .4s);
   /* this creates the subtle slide in animation of the navigation */
   @include transform(translateX(80px));
-  box-shadow: inset 1px -1px 20px 1px #000;
-
-
-  .menu {
-    margin: 10px 0 16px;
-  }
 
   .sub-menu {
     padding: 0 10px 20px 0;
