--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -2,6 +2,7 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 	color: $color__dark;
 	font-family: $font__alt;
+	line-height: $font__line-height-pre;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
 }
