--- a/sass/theme/_portfolio.scss
+++ b/sass/theme/_portfolio.scss
@@ -1,20 +1,27 @@
-.portfolio-post {
-  margin-top: $column;
-  @include clearfix();
+.portfolio-post--entry {
+  width: 30%;
+  float: left;
+  margin-right: 3%;
+  margin-bottom: $column;
+  text-align: center;
 }
 
 .portfolio-post--image {
-  width: 30%;
-  float: left;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  box-shadow: 0 4px 20px 1px rgba(0,0,0,0.3);
+  @include transition(0.4s linear);
 
-  img {
-    height: 100%;
-    width: 100%;
+  &:hover {
+    box-shadow: 0 2px 5px 0px rgba(0,0,0,0.5);
   }
 }
 
-.portfolio-post--entry {
-  width: 70%;
-  float: left;
-  padding: 0 $column $gutter 0;
+.portfolio-post--title {
+  margin-bottom: -20px;
+}
+
+.portfolio-post--links {
+  margin: $gutter 0;
 }
