--- a/style.css
+++ b/style.css
@@ -1043,22 +1043,29 @@ body {
     .home-contact--form .mug {
       display: none; } }
 
-.portfolio-post {
-  margin-top: 4.235801032em;
-  content: "";
-  display: table; }
+.portfolio-post--entry {
+  width: 30%;
+  float: left;
+  margin-right: 3%;
+  margin-bottom: 4.235801032em;
+  text-align: center; }
 
 .portfolio-post--image {
-  width: 30%;
-  float: left; }
-  .portfolio-post--image img {
-    height: 100%;
-    width: 100%; }
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  box-shadow: 0 4px 20px 1px rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.4s linear;
+  -moz-transition: 0.4s linear;
+  transition: 0.4s linear; }
+  .portfolio-post--image:hover {
+    box-shadow: 0 2px 5px 0px rgba(0, 0, 0, 0.5); }
 
-.portfolio-post--entry {
-  width: 70%;
-  float: left;
-  padding: 0 4.235801032em 1.618em 0; }
+.portfolio-post--title {
+  margin-bottom: -20px; }
+
+.portfolio-post--links {
+  margin: 1.618em 0; }
 
 .site-footer {
   background: #424242;
