--- a/sass/theme/_portfolio.scss
+++ b/sass/theme/_portfolio.scss
@@ -1,4 +1,4 @@
-.portfolio-post--entry {
+.portfolio-post {
   width: 30%;
   float: left;
   margin-right: 3%;
@@ -10,18 +10,25 @@
   width: 100%;
   height: 400px;
   overflow: hidden;
-  box-shadow: 0 4px 20px 1px rgba(0,0,0,0.3);
-  @include transition(0.4s linear);
-
-  &:hover {
-    box-shadow: 0 2px 5px 0px rgba(0,0,0,0.5);
-  }
+  border: 5px solid $color__light-alt;
 }
 
 .portfolio-post--title {
-  margin-bottom: -20px;
+  margin-bottom: 0;
 }
 
 .portfolio-post--links {
   margin: $gutter 0;
+}
+
+.portfolio-head {
+  background: $color__light-alt;
+  padding: $gutter;
+  margin-top: $gutter;
+  text-align: center;
+
+  h3,
+  p {
+    margin: 0;
+  }
 }
