--- a/src/sass/typography/_headings.scss
+++ b/src/sass/typography/_headings.scss
@@ -1,6 +1,6 @@
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
-	color: $color__dark;
+	color: $color__dark-med;
 	font-family: $font__alt;
 	line-height: $font__line-height-pre;
 	-webkit-font-smoothing: antialiased;
