--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ body, button, input, select, textarea {
 
 h1, h2, h3, h4, h5, h6 {
   clear: both;
-  color: #424242;
+  color: #455A64;
   font-family: 'Fjalla One', sans-serif;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
@@ -260,7 +260,7 @@ address {
   margin: 0 0 1.5em; }
 
 pre {
-  background: #EEEEEE;
+  background: #ECEFF1;
   font-family: "Courier 10 Pitch", Courier, monospace;
   font-size: 15px;
   font-size: 0.9375rem;
@@ -280,7 +280,7 @@ abbr, acronym {
   cursor: help; }
 
 mark, ins {
-  background: #EEEEEE;
+  background: #ECEFF1;
   text-decoration: none; }
 
 small {
@@ -350,18 +350,22 @@ table {
 button, input[type="button"], input[type="reset"], input[type="submit"], .button {
   cursor: pointer;
   width: auto;
-  color: #81C784;
-  border: 3px solid #81C784;
+  border-color: #0097A7;
+  background: #0097A7;
+  border: 3px solid #0097A7;
+  color: #FAFAFA;
   padding: 10px 20px;
-  border-radius: 10px;
+  border-radius: 10px; }
+
+button:hover, input:hover[type="button"], input:hover[type="reset"], input:hover[type="submit"], .button:hover {
+  color: #0097A7;
+  background: #FAFAFA;
+  border: 3px solid #0097A7; }
+
+a, button, input[type="button"], input[type="reset"], input[type="submit"], .button {
   -webkit-transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
   transition: all 0.3s linear; }
-
-button:hover, input:hover[type="button"], input:hover[type="reset"], input:hover[type="submit"], .button:hover {
-  border-color: #81C784;
-  background: #81C784;
-  color: #FAFAFA; }
 
 input, select, textarea {
   border-color: rgba(0, 0, 0, 0.1);
@@ -395,12 +399,12 @@ input:focus, textarea:focus {
 5.1 Links
 --------------------------------------------------------------*/
 a {
-  color: #81C784;
+  color: #0097A7;
   text-decoration: none; }
   a:visited {
-    color: #81C784; }
+    color: #0097A7; }
   a:hover, a:focus, a:active {
-    color: #009688; }
+    color: #00BAD2; }
   a:focus {
     outline: thin dotted; }
   a:hover, a:active {
@@ -478,7 +482,7 @@ a {
     margin: 0; }
 
 .nav-title {
-  color: #EEEEEE;
+  color: #ECEFF1;
   padding: 18px 0;
   margin: 0; }
 
@@ -544,7 +548,7 @@ a {
   top: 10px;
   height: 100%;
   width: 50px;
-  background: #EEEEEE;
+  background: #ECEFF1;
   border-radius: 10px;
   -webkit-transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
@@ -570,7 +574,7 @@ a {
   transform: translateX(-50%) translateY(-50%);
   width: 20px;
   height: 2px;
-  background-color: #424242;
+  background-color: #263238;
   /* these are the upper and lower lines in the menu icon */ }
   .menu-icon::before, .menu-icon:after {
     content: '';
@@ -587,7 +591,7 @@ a {
 .is-clicked .menu-icon {
   background-color: rgba(255, 255, 255, 0); }
   .is-clicked .menu-icon::before, .is-clicked .menu-icon::after {
-    background-color: #424242; }
+    background-color: #263238; }
   .is-clicked .menu-icon::before {
     bottom: 0;
     -webkit-transform: rotate(45deg);
@@ -612,7 +616,7 @@ a {
   /* the secondary navigation is covered by the main element */
   z-index: 1;
   width: 260px;
-  background-color: #424242;
+  background-color: #263238;
   overflow-y: auto;
   /* Force Hardware Acceleration in WebKit */
   -webkit-transform: translateZ(0);
@@ -699,11 +703,11 @@ a {
   width: 1px;
   overflow: hidden; }
   .screen-reader-text:hover, .screen-reader-text:active, .screen-reader-text:focus {
-    background-color: #EEEEEE;
+    background-color: #ECEFF1;
     border-radius: 3px;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
     clip: auto !important;
-    color: #424242;
+    color: #263238;
     display: block;
     font-size: 14px;
     font-size: 0.875rem;
@@ -900,7 +904,7 @@ html, body {
   padding: 0 50px; }
 
 .home-top {
-  padding: 4.235801032em 0 8.471602064em 0; }
+  padding: 1.618em 0 8.471602064em 0; }
 
 .home-top-widget h1 {
   max-width: 600px; }
@@ -908,7 +912,7 @@ html, body {
   max-width: 800px; }
 
 .home-middle {
-  background: #424242;
+  background: #263238;
   background-image: url('http://localhost/Mears/wp-content/uploads/2015/01/office-space.jpg');
   background-size: cover;
   background-repeat: no-repeat no-repeat; }
@@ -917,7 +921,7 @@ html, body {
     margin: 0 auto;
     padding: 8.471602064em 50px; }
   .home-middle p {
-    color: #EEEEEE;
+    color: #ECEFF1;
     -webkit-columns: 2;
     -moz-columns: 2;
     columns: 2;
@@ -930,7 +934,7 @@ html, body {
         -moz-columns: 1;
         columns: 1; } }
   .home-middle h2 {
-    color: #EEEEEE; }
+    color: #ECEFF1; }
 
 .home-bottom {
   padding: 4.235801032em 0; }
@@ -954,8 +958,8 @@ html, body {
       display: none; } }
 
 .site-footer {
-  background: #424242;
-  color: #EEEEEE;
+  background: #263238;
+  color: #ECEFF1;
   min-width: 100%;
   padding-top: 4.235801032em;
   text-align: center; }
@@ -982,7 +986,7 @@ html, body {
   width: 100%;
   height: 400px;
   overflow: hidden;
-  border: 5px solid #EEEEEE; }
+  border: 5px solid #ECEFF1; }
 
 .portfolio-post--title {
   margin-bottom: 0; }
@@ -991,7 +995,7 @@ html, body {
   margin: 1.618em 0; }
 
 .portfolio-head {
-  background: #EEEEEE;
+  background: #ECEFF1;
   padding: 1.618em;
   margin-top: 1.618em;
   text-align: center; }
@@ -1008,21 +1012,15 @@ html, body {
   float: left;
   margin-right: 3%;
   margin-bottom: 1.618em;
-  height: 550px;
+  height: auto;
   overflow: hidden; }
 
-.website-post {
-  overflow: scroll; }
-
-.website-image {
-  overflow: hidden;
-  border: 5px solid #EEEEEE; }
-  .website-image img {
-    height: 100%;
-    width: 100%; }
+.website-image img {
+  height: 100%;
+  width: 100%; }
 
 .website-post, .website-post-head {
-  background: #EEEEEE;
+  background: #ECEFF1;
   padding: 1.618em; }
 
 .website-post-head {
