--- a/src/sass/theme/_portfolio.scss
+++ b/src/sass/theme/_portfolio.scss
@@ -10,7 +10,6 @@
   width: 100%;
   height: 400px;
   overflow: hidden;
-  border: 5px solid $color__light-alt;
 }
 
 .portfolio-post--title {
@@ -31,4 +30,25 @@
   p {
     margin: 0;
   }
+}
+
+@media screen and (max-width: $M) {
+  .portfolio-head {
+    margin-top: $column;
+  }
+
+  .portfolio-post {
+    width: 100%;
+    margin: 0;
+  }
+
+  .portfolio-post--image {
+    height: auto;
+  }
+
+  .portfolio-post--links .button {
+    display: block;
+    margin-bottom: $gutter;
+  }
+
 }
