--- a/src/sass/theme/_portfolio.scss
+++ b/src/sass/theme/_portfolio.scss
@@ -34,7 +34,7 @@
 
 @media screen and (max-width: $M) {
   .portfolio-head {
-    margin-top: ($column + $gutter);
+    margin-top: 150px;
   }
 
   .portfolio-post {
