--- a/style.css
+++ b/style.css
@@ -994,13 +994,14 @@ html, body {
   color: #ECEFF1;
   min-width: 100%;
   padding-top: 4.235801032em;
-  text-align: center; }
+  text-align: center;
+  position: relative; }
   .site-footer ul {
     margin: 0;
     padding: 0; }
   .site-footer li {
     display: inline-block;
-    padding: 1.618em; }
+    padding: 1.618em 1.618em 0 1.618em; }
 
 .name {
   font-family: 'Fjalla One', sans-serif;
@@ -1078,10 +1079,23 @@ html, body {
 
 .website-post-head {
   margin-top: 1.618em;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  overflow: hidden; }
   .website-post-head h2, .website-post-head p {
     margin: 0;
-    padding: 0; }
+    padding: 0;
+    position: relative;
+    z-index: 2; }
+
+.back-dec-portfolio {
+  font-size: 200px;
+  color: #FAFAFA;
+  position: absolute;
+  top: -75px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0; }
 
 @media screen and (max-width: 800px) {
   .website-image, .website-post {
