--- a/style.css
+++ b/style.css
@@ -1036,9 +1036,13 @@ html, body {
   background: #ECEFF1;
   padding: 1.618em;
   margin-top: 1.618em;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  overflow: hidden; }
   .portfolio-head h3, .portfolio-head p {
-    margin: 0; }
+    margin: 0;
+    position: relative;
+    z-index: 2; }
 
 @media screen and (max-width: 800px) {
   .portfolio-head {
@@ -1061,17 +1065,25 @@ html, body {
   display: table;
   margin-bottom: 4.235801032em; }
 
-.website-image, .website-post {
-  width: 30%;
-  float: left;
-  margin-right: 3%;
-  margin-bottom: 1.618em;
-  height: auto;
-  overflow: hidden; }
+.website-grid {
+  -moz-column-count: 3;
+  -moz-column-gap: 1.618em;
+  -moz-column-fill: auto;
+  -webkit-column-count: 3;
+  -webkit-column-gap: 1.618em;
+  -webkit-column-fill: auto;
+  column-count: 3;
+  column-gap: 1.618em;
+  column-fill: auto; }
 
-.website-image img {
+.website-grid img {
+  border: 5px solid #ECEFF1;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 1.618em; }
+
+.website-post {
+  margin-bottom: 1.618em; }
 
 .website-post, .website-post-head {
   background: #ECEFF1;
@@ -1088,7 +1100,7 @@ html, body {
     position: relative;
     z-index: 2; }
 
-.back-dec-portfolio {
+.back-portfolio {
   font-size: 200px;
   color: #FAFAFA;
   position: absolute;
@@ -1097,14 +1109,26 @@ html, body {
   margin: 0 auto;
   padding: 0; }
 
-@media screen and (max-width: 800px) {
-  .website-image, .website-post {
-    width: 100%;
-    margin: 1.618em 0; }
+@media screen and (max-width: 1200px) {
+  .website-grid {
+    -moz-column-count: 2;
+    -moz-column-gap: 1.618em;
+    -moz-column-fill: auto;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 1.618em;
+    -webkit-column-fill: auto;
+    column-count: 2;
+    column-gap: 1.618em;
+    column-fill: auto; }
+ }
 
-  .website-post .button {
-    display: block; }
+@media screen and (max-width: 800px) {
+  .website-grid {
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1; }
 
   .website-post-head {
-    margin-top: 150px; }
+    margin-top: 150px;
+    margin-bottom: 1.618em; }
  }
