--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	10.2 Asides
 	10.3 Comments
 11.0 Infinite scroll
+	11.1 Parallax scroll
 12.0 Media
 	12.1 Captions
 	12.2 Galleries
@@ -816,6 +817,9 @@ a {
   display: block; }
 
 /*--------------------------------------------------------------
+11.1 Parallax scroll
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
 12.0 Media
 --------------------------------------------------------------*/
 .page-content .wp-smiley, .entry-content .wp-smiley, .comment-content .wp-smiley {
@@ -902,6 +906,13 @@ html, body {
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 50px; }
+
+.button .fa {
+  padding-left: 10px; }
+
+.home-bottom .fa {
+  font-size: 2em;
+  margin: 5px; }
 
 @media screen and (max-width: 800px) {
   .site-content, .site-footer, .site-title {
@@ -1024,7 +1035,8 @@ html, body {
 .portfolio-post--image {
   width: 100%;
   height: 400px;
-  overflow: hidden; }
+  overflow: hidden;
+  border: 5px solid #ECEFF1; }
 
 .portfolio-post--title {
   margin-bottom: 0; }
@@ -1043,6 +1055,8 @@ html, body {
     margin: 0;
     position: relative;
     z-index: 2; }
+  .portfolio-head p {
+    font-style: italic; }
 
 @media screen and (max-width: 800px) {
   .portfolio-head {
@@ -1099,6 +1113,8 @@ html, body {
     padding: 0;
     position: relative;
     z-index: 2; }
+  .website-post-head p {
+    font-style: italic; }
 
 .back-portfolio {
   font-size: 200px;
