--- a/src/sass/theme/_portfolio.scss
+++ b/src/sass/theme/_portfolio.scss
@@ -35,13 +35,17 @@
 
   h2,
   p {
-    margin: 0;
-    padding: 0;
     position: relative;
     z-index: 2;
+    padding: 0;
+  }
+
+  h2 {
+    margin: 0;
   }
 
   p {
+    margin: -15px 0 0 0;
     font-style: italic;
   }
 }
