fixed outline on menu icon

--- a/src/sass/navigation/_nav.scss
+++ b/src/sass/navigation/_nav.scss
@@ -7,10 +7,6 @@
   }
 }
 
-
-
-
-
 .nav-title {
   color: $color__light-alt;
   padding: 18px 0;
@@ -88,8 +84,11 @@
     -moz-box-shadow: 0 0 20px #cccccc;
     box-shadow: 0 0 20px rgba(0,0,0,0.15);
   }
+  &:focus {
+    outline: none;
+  }
 }
-
+a:focus { outline: none; }
 /* this span is the central line in the menu icon */
 .menu-icon {
   display: inline-block;
