--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ a {
   a:visited {
     color: #0097A7; }
   a:hover, a:focus, a:active {
-    color: #00BAD2; }
+    color: #00E5FF; }
   a:focus {
     outline: thin dotted; }
   a:hover, a:active {
