move wordpress admin bar to bottom on front-end

--- a/src/sass/theme/_home.scss
+++ b/src/sass/theme/_home.scss
@@ -15,7 +15,8 @@
   background: $color__dark;
   background-image: url('http://localhost/Mears/wp-content/uploads/2015/01/office-space.jpg');
   background-size: cover;
-  background-repeat:no-repeat no-repeat;
+  background-repeat: no-repeat;
+  background-position: center center;
 
   .home-middle-widget {
     max-width: 1400px;
