--- a/src/sass/theme/_portfolio.scss
+++ b/src/sass/theme/_portfolio.scss
@@ -28,7 +28,7 @@
 }
 
 .website-post-head {
-  margin-top: $gutter;
+  margin-top: $column;
   text-align: center;
   position: relative;
   overflow: hidden;
