--- a/src/sass/theme/_main.scss
+++ b/src/sass/theme/_main.scss
@@ -42,3 +42,10 @@ body {
     margin: 0;
   }
 }
+
+@media screen and (max-width: $S) {
+  .site-title {
+    @include font-size(2.2);
+    padding-top: 0.3em;
+  }
+}
