--- a/style.css
+++ b/style.css
@@ -1043,7 +1043,7 @@ html, body {
 @media screen and (max-width: 800px) {
   .site-footer li {
     display: block;
-    padding: 1em; }
+    padding: 5px; }
  }
 
 .portfolio-post {
