--- a/style.css
+++ b/style.css
@@ -1086,7 +1086,7 @@ html, body {
 
 @media screen and (max-width: 800px) {
   .website-post-head {
-    margin-top: 150px;
+    margin-top: 125px;
     margin-bottom: 1.618em; }
 
   .portfolio-post {
@@ -1099,6 +1099,12 @@ html, body {
   .portfolio-post--links .button {
     display: block;
     margin-bottom: 1.618em; }
+ }
+
+@media screen and (max-width: 500px) {
+  .website-post .button {
+    font-size: 12.8px;
+    font-size: 0.8rem; }
  }
 
 .website-entry {
