--- a/style.css
+++ b/style.css
@@ -1084,6 +1084,12 @@ html, body {
     margin: -15px 0 0 0;
     font-style: italic; }
 
+@media screen and (max-width: 1200px) {
+  .portfolio-post--title {
+    font-size: 32px;
+    font-size: 2rem; }
+ }
+
 @media screen and (max-width: 800px) {
   .website-post-head {
     margin-top: 125px;
